# graphANNIS

./: CMakeLists.txt
cmake/: cssl.cmake
ext/cssl-graphannis/: .gitignore  CMakeLists.txt  cssl.c  skiplist.c  skiplist.h
graphannis-api/src/main/java/org/corpus_tools/graphannis/: API.java  QueryToJSON.java
src/benchmarks/: benchmarkmain.cpp  csslbenchmark.cpp  dynamicbenchmark.h  parallelbenchmark.cpp
src/lib/annis/: db.cpp  db.h  graphstorageregistry.cpp  graphstorageregistry.h  stringstorage.h  types.h
src/lib/annis/api/: corpusstoragemanager.cpp  graphupdate.cpp  graphupdate.h
src/lib/annis/graphstorage/: csslprepostorderstorage.cpp  csslprepostorderstorage.h  prepostorderstorage.h
src/lib/annis/json/: jsonqueryparser.cpp
src/lib/annis/operators/: inclusion.cpp  overlap.cpp  partofsubcorpus.cpp
src/lib/annis/query/: singlealternativequery.cpp
src/lib/annis/util/: relannisloader.cpp
src/runner/: console.cpp
src/tests/: LoadTest.h  SearchTestGUM.h  SearchTestPcc2.h  SearchTestRidges.h  SearchTestTiger.h  cssltest.h  testmain.cpp
